--- a/app.yml
+++ b/app.yml
@@ -22,30 +22,30 @@ default_events:
   # - deployment_status
   # - fork
   # - gollum
-  # - issue_comment
+  - issue_comment
   - issues
-# - label
-# - milestone
-# - member
-# - membership
-# - org_block
-# - organization
-# - page_build
-# - project
-# - project_card
-# - project_column
-# - public
-# - pull_request
-# - pull_request_review
-# - pull_request_review_comment
-# - push
-# - release
-# - repository
-# - repository_import
-# - status
-# - team
-# - team_add
-# - watch
+  - label
+  - milestone
+  # - member
+  # - membership
+  # - org_block
+  - organization
+  # - page_build
+  # - project
+  # - project_card
+  # - project_column
+  - public
+  - pull_request
+  - pull_request_review
+  - pull_request_review_comment
+  # - push
+  # - release
+  - repository
+  # - repository_import
+  # - status
+  # - team
+  # - team_add
+  # - watch
 
 # The set of permissions needed by the GitHub App. The format of the object uses
 # the permission name for the key (for example, issues) and the access type for
