--- a/package.json
+++ b/package.json
@@ -12,20 +12,54 @@
     "probot-app"
   ],
   "scripts": {
+    "dev-typescript": "tsc -w",
+    "dev-netlify": "netlify dev",
+    "start-proxy": "node proxy.js",
+    "dev": "npm run dev-typescript & npm run dev-netlify & npm run start-proxy",
     "build": "tsc",
     "start": "probot run ./lib/index.js",
-    "test": "jest"
+    "test": "jest",
+    "prepare": "husky install",
+    "format-check": "prettier \"src/**/*.{ts,js,json}\" --ignore-path .gitignore --check",
+    "format-fix": "prettier \"src/**/*.{ts,js,json}\" --ignore-path .gitignore --write",
+    "lint-check": "eslint . --ext \"src/**/*.{ts,js,json}\" --ignore-path .gitignore --cache",
+    "lint-fix": "eslint . --ext \"src/**/*.{ts,js,json}\" --ignore-path .gitignore --cache --fix",
+    "pre-commit": "lint-staged"
+  },
+  "commitlint": {
+    "extends": [
+      "@commitlint/config-conventional"
+    ]
+  },
+  "lint-staged": {
+    "src/**/*.{ts,js,json}": [
+      "npm run format-fix",
+      "npm run lint-fix"
+    ]
   },
   "dependencies": {
+    "@netlify/functions": "^1.0.0",
+    "@probot/adapter-aws-lambda-serverless": "^3.0.0",
+    "lodash-es": "^4.17.21",
     "probot": "^11.0.1"
   },
   "devDependencies": {
-    "@types/jest": "^26.0.19",
+    "@commitlint/cli": "^16.2.1",
+    "@commitlint/config-conventional": "^16.2.1",
+    "@types/lodash-es": "^4.17.6",
     "@types/node": "^14.14.19",
-    "jest": "^26.6.3",
+    "@typescript-eslint/eslint-plugin": "^5.13.0",
+    "@typescript-eslint/parser": "^5.13.0",
+    "eslint": "^8.10.0",
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-plugin-prettier": "^4.0.0",
+    "eslint-plugin-simple-import-sort": "^7.0.0",
+    "husky": "^7.0.4",
+    "lint-staged": "^12.3.4",
+    "netlify-cli": "^9.12.3",
     "nock": "^13.0.5",
+    "prettier": "^2.5.1",
     "smee-client": "^1.2.2",
-    "ts-jest": "^26.4.4",
     "typescript": "^4.1.3"
   },
   "engines": {
