--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
     ]
   },
   "lint-staged": {
-    "src/**/*.{ts,js,json}": [
+    "{src,functions}/**/*.{ts,js,json}": [
       "npm run format-fix",
       "npm run lint-fix"
     ]
